fixed dynamic view height

--- a/versevision/src/App.css
+++ b/versevision/src/App.css
@@ -170,7 +170,7 @@
   margin-left: 17.5vw;
   width: 80vw;
   max-width: none;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   background: white;
