fix mobile sidebar issue

--- a/versevision/src/App.css
+++ b/versevision/src/App.css
@@ -190,7 +190,7 @@
 
 .side-bar {
   width: 25vw;
-  height: 100vh;
+  height: 100dvh;
   background-color: #ffffff;
   position: fixed;
   left: 0;
