--- a/versevision/src/App.css
+++ b/versevision/src/App.css
@@ -83,6 +83,7 @@
   padding: 2rem;
   background: #ffffff;
   border-top: 1px solid #e5e5e5;
+  
 }
 
 .query-input {
@@ -98,7 +99,7 @@
   resize: none;
   overflow: hidden;
   min-height: 1.2rem;
-  max-height: 8rem;
+  margin-left: -2%;
   line-height: 1.2;
 }
 
@@ -120,6 +121,8 @@
   letter-spacing: 0.05em;
   font-size: 0.875rem;
   align-self: flex-end;
+  margin-right: -2%;
+  
   
 }
 
@@ -354,7 +357,8 @@
   }
 
   .input-form {
-    padding: 1.5rem;
+    padding: 1rem;
+    padding-top: 1.5rem;
     gap: 0.75rem;
     /* border: 2px solid black; */
     
@@ -775,6 +779,14 @@ img, svg {
     word-break: break-word;
     overflow-wrap: break-word;
     max-width: 100%;
+  }
+
+  .submit-button{
+    margin-right: -5%;
+  }
+
+  .query-input {
+    margin-left: -5%;
   }
 }
 
